fixing some documentation

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <span>
       This API was built with the the purpose of practicing RESTful API calls. The data is from BirdLife International. It can be
       downloaded from http://www.birdlife.org/datazone/userfiles/file/Species/Taxonomy/BirdLife_Checklist_Version_70.zip. See
-      http://www.birdlife.org/datazone/info/taxonomy for more details.
+      http://birdlife.org/datazone/info/taxonomy for more details.
     </span>
     <p>The base url is http://www.bird-api.com.</p>
     <div class="endpoint">
