--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='sampleApi'>
 <head>
   <title>Sample Bird API</title>
   <link rel="stylesheet" href="normalize.css">
